--- a/app/src/main/res/layout/list_item_ayuntamientos.xml
+++ b/app/src/main/res/layout/list_item_ayuntamientos.xml
@@ -11,12 +11,12 @@
         android:id="@+id/textViewNombreAyuntamiento"
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:textSize="20sp"
-        android:background="@color/orange"
         android:layout_gravity="center_horizontal"
         android:layout_weight="1"
+        android:background="@color/orange"
         android:gravity="center"
-        android:text="@string/placeholder" />
+        android:text="@string/ayuntamiento"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/textViewTelefonoAyuntamiento"
