--- a/app/src/main/res/layout/fragment_consulta_protectora.xml
+++ b/app/src/main/res/layout/fragment_consulta_protectora.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/consultaAyuntamientos"
+    android:id="@+id/consultaProtectoras"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ayuntamientos.ConsultaAyuntamiento">
+    tools:context=".protectoras.ConsultaProtectora">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerViewAyuntamientos"
+        android:id="@+id/recyclerViewProtectoras"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="70dp"
@@ -19,36 +19,35 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textViewOrdenarAyuntamientos"
+        android:id="@+id/textViewOrdenarProtectoras"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ordenar"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerViewAyuntamientos"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerViewProtectoras"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.021"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.592" />
+        app:layout_constraintVertical_bias="0.592"/>
 
     <Spinner
-        android:id="@+id/spinnerOrdenarAyuntamientos"
+        android:id="@+id/spinnerOrdenarProtectoras"
         android:layout_width="225dp"
         android:layout_height="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerViewAyuntamientos"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerViewProtectoras"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.456"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.421" />
+        app:layout_constraintVertical_bias="0.421"/>
 
     <Button
-        android:id="@+id/buttonNuevoAyuntamiento"
+        android:id="@+id/buttonNuevaProtectora"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nuevo"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerViewAyuntamientos"
+        android:text="@string/nueva"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerViewProtectoras"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/spinnerOrdenarAyuntamientos"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintStart_toEndOf="@+id/spinnerOrdenarProtectoras"
+        app:layout_constraintTop_toTopOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
