--- a/app/src/main/res/layout/dialog_modificacion_veterinario.xml
+++ b/app/src/main/res/layout/dialog_modificacion_veterinario.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout10"
+    android:id="@+id/frameLayout11"
     android:layout_width="match_parent"
     android:layout_height="320dp"
-    tools:context=".veterinarios.AltaVeterinario">
+    tools:context=".veterinarios.ModificacionVeterinario">
 
     <TextView
-        android:id="@+id/textViewAltaNombreVeterinario"
+        android:id="@+id/textViewModificacionNombreVeterinario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/veterinario"
@@ -20,97 +20,97 @@
         app:layout_constraintVertical_bias="0.099" />
 
     <TextView
-        android:id="@+id/textViewAltaApellidosVeterinario"
+        android:id="@+id/textViewModificacionApellidosVeterinario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:text="@string/apellidos"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textViewAltaNombreVeterinario"
+        app:layout_constraintEnd_toEndOf="@+id/textViewModificacionNombreVeterinario"
         app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toStartOf="@+id/textViewAltaNombreVeterinario"
-        app:layout_constraintTop_toBottomOf="@+id/textViewAltaNombreVeterinario"
+        app:layout_constraintStart_toStartOf="@+id/textViewModificacionNombreVeterinario"
+        app:layout_constraintTop_toBottomOf="@+id/textViewModificacionNombreVeterinario"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textViewAltaTelefonoVeterinario"
+        android:id="@+id/textViewModificacionTelefonoVeterinario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:text="@string/telefono"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textViewAltaApellidosVeterinario"
+        app:layout_constraintEnd_toEndOf="@+id/textViewModificacionApellidosVeterinario"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/textViewAltaApellidosVeterinario"
-        app:layout_constraintTop_toBottomOf="@+id/textViewAltaApellidosVeterinario"
+        app:layout_constraintStart_toStartOf="@+id/textViewModificacionApellidosVeterinario"
+        app:layout_constraintTop_toBottomOf="@+id/textViewModificacionApellidosVeterinario"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textViewAltaEspecialidadVeterinario"
+        android:id="@+id/textViewModificacionEspecialidadVeterinario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="45dp"
         android:text="@string/especialidad"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textViewAltaTelefonoVeterinario"
+        app:layout_constraintEnd_toEndOf="@+id/textViewModificacionTelefonoVeterinario"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/textViewAltaTelefonoVeterinario"
-        app:layout_constraintTop_toBottomOf="@+id/textViewAltaTelefonoVeterinario"
+        app:layout_constraintStart_toStartOf="@+id/textViewModificacionTelefonoVeterinario"
+        app:layout_constraintTop_toBottomOf="@+id/textViewModificacionTelefonoVeterinario"
         app:layout_constraintVertical_bias="0.009" />
 
     <EditText
-        android:id="@+id/editTextAltaApellidosVeterinario"
+        android:id="@+id/editTextModificacionApellidosVeterinario"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/apellidosPlaceholder"
         android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewAltaApellidosVeterinario"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewModificacionApellidosVeterinario"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.865"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textViewAltaApellidosVeterinario"
+        app:layout_constraintTop_toTopOf="@+id/textViewModificacionApellidosVeterinario"
         app:layout_constraintVertical_bias="0.653" />
 
     <EditText
-        android:id="@+id/editTextAltaNombreVeterinario"
+        android:id="@+id/editTextModificacionNombreVeterinario"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/nombrePlaceholder"
         android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewAltaNombreVeterinario"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewModificacionNombreVeterinario"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.862"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textViewAltaNombreVeterinario"
+        app:layout_constraintTop_toTopOf="@+id/textViewModificacionNombreVeterinario"
         app:layout_constraintVertical_bias="0.576" />
 
     <EditText
-        android:id="@+id/editTextAltaTelefonoVeterinario"
+        android:id="@+id/editTextModificacionTelefonoVeterinario"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/telefonoPlaceholder"
         android:inputType="phone"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewAltaTelefonoVeterinario"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewModificacionTelefonoVeterinario"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.865"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textViewAltaTelefonoVeterinario"
+        app:layout_constraintTop_toTopOf="@+id/textViewModificacionTelefonoVeterinario"
         app:layout_constraintVertical_bias="0.73" />
 
     <EditText
-        android:id="@+id/editTextAltaEspecialidadVeterinario"
+        android:id="@+id/editTextModificacionEspecialidadVeterinario"
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="@string/especialidadPlaceholder"
         android:inputType="text"
-        app:layout_constraintBottom_toBottomOf="@+id/textViewAltaEspecialidadVeterinario"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewModificacionEspecialidadVeterinario"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.865"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textViewAltaEspecialidadVeterinario"
+        app:layout_constraintTop_toTopOf="@+id/textViewModificacionEspecialidadVeterinario"
         app:layout_constraintVertical_bias="0.615" />
 </androidx.constraintlayout.widget.ConstraintLayout>
